Added Instructions and fixed bug

--- a/pages/campaigns/requests/index.module.scss
+++ b/pages/campaigns/requests/index.module.scss
@@ -1,5 +1,9 @@
-
+.bottomInfo {
+  margin: 20px 0px !important;
+}
 
 .tableWrapper {
   padding: 20px 0px;
+  display: flex;
+  flex-direction: column;
 }
