--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,7 +1,8 @@
 .rightContent {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .cardRoot {
@@ -11,4 +12,5 @@
 
 .createCampaign {
   text-transform: none !important;
+  margin-bottom: 20px !important;
 }
